folder clipping fix

--- a/app/assets/stylesheets/droom/_folders.sass
+++ b/app/assets/stylesheets/droom/_folders.sass
@@ -24,7 +24,6 @@ div.attachments
   position: relative
   float: right
   width: 240px
-  overflow: hidden
   font-size: 90%
   h3
     margin: 0
